--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.svs.hztb.Activities.MobilePhoneRegistrationActivity">
+    tools:context=".Activities.RegistrationActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registration"
+        android:text="@string/title_activity_mobile_phone_registration"
         android:id="@+id/textView"
         android:textSize="24dp"
         android:gravity="center"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="HowZThisBuddy is a platform to provide peer &amp; friends feedback on a suitability of product in real time. By entering into this site you allow the product vendor to send mobile promotions in future"
+        android:text="@string/string_howzBuddy_overview"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Phone No"
+        android:text="@string/string_phoneNumber"
         android:id="@+id/textView3"
         android:layout_alignParentStart="true"
         android:paddingLeft="25dp"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="(Country code followed by phone number)"
+        android:text="@string/string_registration_content_otp"
         android:id="@+id/textView4"
         android:layout_below="@+id/editText_mobilePhoneNo"
         android:layout_alignStart="@+id/editText_mobilePhoneNo"
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Verification code will be sent to your phone as SMS"
+        android:text="@string/string_registration_vertification_content"
         android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
         android:layout_alignStart="@+id/textView4"
@@ -81,7 +81,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/string_submit"
         android:id="@+id/button_submit"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="25dp"
