--- a/app/src/main/res/layout/activity_confirm_registration.xml
+++ b/app/src/main/res/layout/activity_confirm_registration.xml
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="If you do not receive your access code within 60 seconds, Press Send Again"
+        android:text="@string/string_registration_timer_warning"
         android:id="@+id/textView10"
         android:layout_below="@+id/edittext_verification_code"
         android:layout_centerHorizontal="true"
