--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -34,6 +34,7 @@
         android:id="@+id/editText_mobilePhoneNo"
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true"
+        android:textSize="18sp"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
@@ -70,6 +71,7 @@
         android:text="@string/string_submit"
         android:id="@+id/button_submit"
         android:layout_below="@+id/textView5"
+        android:onClick="onSubmitClicked"
         android:layout_marginTop="25dp"
         android:layout_alignEnd="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
