--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/registration_header_background">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/textview_actionbarTitle"
         android:layout_gravity="center_horizontal"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:gravity="center"
         android:text="@string/actionbar_title" />
 </LinearLayout>
