Modified Complete Code . Added Strings in values . Completed Screen designing and work flow . Login with Social Networking sites remaining

--- a/app/src/main/res/layout/activity_confirm_registration.xml
+++ b/app/src/main/res/layout/activity_confirm_registration.xml
@@ -43,7 +43,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="phone"
         android:ems="10"
         android:id="@+id/edittext_verification_code"
         android:layout_below="@+id/textview_enterOTP"
@@ -70,7 +70,7 @@
         android:text="@string/string_registration_button_verify"
         android:id="@+id/button_verify"
         android:onClick="onVerifyButtonClicked"
-        android:background="@mipmap/submit_background"
+        android:background="@color/picton_blue"
         android:layout_below="@+id/textView_timerWarning"
         android:layout_marginBottom="10dp"
         android:layout_alignStart="@+id/edittext_verification_code"
@@ -84,7 +84,7 @@
         android:id="@+id/button"
         android:layout_below="@+id/button_verify"
         android:onClick="onSendOTPAgainButtonClicked"
-        android:background="@mipmap/submit_background"
+        android:background="@color/picton_blue"
         android:layout_alignStart="@+id/button_verify"
         android:layout_alignEnd="@+id/button_verify"
         android:textSize="20dp" />
