--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,118 +1,133 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.RegistrationActivity"
-    android:background="@mipmap/registration_bg">
+    android:background="@mipmap/registration_bg"
+    tools:context=".Activities.RegistrationActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/string_howzBuddy_overview"
-        android:id="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:textColor="@android:color/white"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:gravity="center"
-        android:padding="20dp" />
+        android:padding="20dp"
+        android:text="@string/string_howzBuddy_overview"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/string_content_phone"
-        android:id="@+id/textView4"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:padding="20dp"
-        android:gravity="center"
-        android:textColor="@android:color/white"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentEnd="true" />
+        android:gravity="center"
+        android:padding="20dp"
+        android:text="@string/string_content_phone"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/string_phoneNumber"
-        android:id="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4"
         android:paddingLeft="20dp"
 
-        android:textColor="@android:color/darker_gray"
+        android:text="@string/string_phoneNumber"
 
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/darker_gray" />
 
     <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:layout_marginLeft="20dp"
-        android:drawSelectorOnTop="true"
-        android:layout_marginRight="20dp"
-        android:spinnerMode="dropdown"
-
-        android:background="@android:color/transparent"
-        android:layout_below="@+id/textView3"
-
- />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="+1"
-        android:id="@+id/textview_registration_countryCode"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="5dp"
-        android:textSize="24dp"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/spinner"
-        android:layout_alignStart="@+id/spinner" />
-
-    <ImageView
-        android:layout_width="2dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@mipmap/divider"
-        android:layout_below="@+id/spinner"
-        android:layout_toEndOf="@+id/textview_registration_countryCode" />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="10"
+        android:layout_below="@+id/textView3"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/editText_mobilePhoneNo"
-        android:textSize="24sp"
-        android:textColor="#ffffff"
+        android:background="@android:color/transparent"
+        android:drawSelectorOnTop="true"
+        android:popupBackground="@android:color/black"
+        android:spinnerMode="dropdown" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/spinner"
-        android:layout_toEndOf="@+id/textView3" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+
+        <TextView
+            android:id="@+id/textview_registration_countryCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/editText_mobilePhoneNo"
+            android:layout_alignTop="@+id/editText_mobilePhoneNo"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:text="+1" />
+
+        <View
+            android:id="@+id/line_separator"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/editText_mobilePhoneNo"
+            android:layout_alignTop="@+id/editText_mobilePhoneNo"
+            android:layout_toRightOf="@+id/textview_registration_countryCode"
+            android:background="@android:color/background_light"></View>
+
+        <EditText
+            android:id="@+id/editText_mobilePhoneNo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:padding="10dp"
+            android:inputType="phone"
+            android:background="@android:color/transparent"
+            android:textColor="@android:color/white"
+            android:layout_toRightOf="@+id/line_separator" />
+
+        <View
+            android:id="@+id/separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/background_light"
+            android:layout_below="@+id/editText_mobilePhoneNo"></View>
+    </RelativeLayout>
+
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/string_registration_vertification_content"
-        android:id="@+id/textView5"
-        android:layout_marginTop="25dp"
+        android:layout_alignEnd="@+id/relativeLayout"
+        android:layout_alignStart="@+id/relativeLayout"
+        android:layout_below="@+id/relativeLayout"
         android:gravity="center"
-        android:textSize="18dp"
+        android:text="@string/string_registration_vertification_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/white"
-
-        android:layout_below="@+id/editText_mobilePhoneNo"
-        android:layout_alignEnd="@+id/editText_mobilePhoneNo"
-        android:layout_alignStart="@+id/textview_registration_countryCode" />
+        android:layout_marginTop="10dp"
+        android:textSize="18dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/string_submit"
-        android:id="@+id/button_submit"
-        android:layout_below="@+id/textView5"
-        android:onClick="onSubmitClicked"
-        android:background="@mipmap/submit_background"
-        android:layout_marginTop="25dp"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-     />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/string_submit"
+    android:id="@+id/button_submit"
+    android:layout_below="@+id/textView5"
+    android:onClick="onSubmitClicked"
+    android:background="@color/picton_blue"
+        android:textColor="@android:color/white"
+    android:layout_marginTop="25dp"
+    android:layout_alignEnd="@+id/textView5"
+    android:layout_alignStart="@+id/textView5"
+    />
 </RelativeLayout>
