--- a/app/src/main/res/layout/custom_spinner_item.xml
+++ b/app/src/main/res/layout/custom_spinner_item.xml
@@ -6,24 +6,24 @@
     android:weightSum="1">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:gravity="left"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
+        android:padding="5dp"
         android:id="@+id/custom_spinner_label"
-        android:layout_weight="0.80" />
+        android:layout_weight="0.20" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
         android:src="@mipmap/right_arrow"
         android:background="@android:color/transparent"
-
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.20" />
+        android:layout_gravity="center_vertical|right"
+        android:layout_weight="0.80" />
 
 </LinearLayout>
