added custom cells for the product item . Added ttf font file . Modified naming conventions.

--- a/app/src/main/res/layout/activity_confirm_registration.xml
+++ b/app/src/main/res/layout/activity_confirm_registration.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/string_confirm_Registration_warning"
-        android:id="@+id/textView_confirmRegistrationWarning"
+        android:id="@+id/textview_confirmRegistrationHeader"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:gravity="center"
@@ -20,10 +20,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="+91 987-654-3210"
         android:id="@+id/textView_mobileNumber"
-        android:layout_below="@+id/textView_confirmRegistrationWarning"
+        android:layout_below="@+id/textview_confirmRegistrationHeader"
         android:padding="20dp"
-        android:layout_alignEnd="@+id/textView_confirmRegistrationWarning"
-        android:layout_alignStart="@+id/textView_confirmRegistrationWarning"
+        android:layout_alignEnd="@+id/textview_confirmRegistrationHeader"
+        android:layout_alignStart="@+id/textview_confirmRegistrationHeader"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="26dp" />
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_sendagain"
-        android:id="@+id/button"
+        android:id="@+id/button_sendOTP"
         android:layout_below="@+id/button_verify"
         android:onClick="onSendOTPAgainButtonClicked"
         android:background="@color/picton_blue"
