--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,7 +6,7 @@
     tools:context=".Activities.RegistrationActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/registration_header1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -18,11 +18,11 @@
         android:textColor="@android:color/white" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/registration_header2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/registration_header1"
         android:gravity="center"
         android:padding="20dp"
         android:text="@string/string_content_phone"
@@ -30,11 +30,11 @@
         android:textColor="@android:color/white" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/registration_phoneNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/registration_header2"
         android:paddingLeft="20dp"
 
         android:text="@string/string_phoneNumber"
@@ -46,7 +46,7 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/registration_phoneNum"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@android:color/transparent"
@@ -104,7 +104,7 @@
 
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/registration_header3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/relativeLayout"
@@ -122,12 +122,12 @@
     android:layout_height="wrap_content"
     android:text="@string/string_submit"
     android:id="@+id/button_submit"
-    android:layout_below="@+id/textView5"
+    android:layout_below="@+id/registration_header3"
     android:onClick="onSubmitClicked"
     android:background="@color/picton_blue"
         android:textColor="@android:color/white"
     android:layout_marginTop="25dp"
-    android:layout_alignEnd="@+id/textView5"
-    android:layout_alignStart="@+id/textView5"
+    android:layout_alignEnd="@+id/registration_header3"
+    android:layout_alignStart="@+id/registration_header3"
     />
 </RelativeLayout>
