--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,15 @@
 
     </string-array>
 
+
+    <string-array name="side_menu_items">
+        <item>Coupon</item>
+        <item>Profile</item>
+        <item>Settings</item>
+        <item>Groups</item>
+        <item>Logout</item>
+    </string-array>
+
     <integer-array name="countryCodeArray">
         <item>1</item>
         <item>91</item>
