--- a/app/src/main/res/layout/content_hztb.xml
+++ b/app/src/main/res/layout/content_hztb.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.svs.hztb.HZTBActivity"
-    tools:showIn="@layout/activity_hztb">
+    tools:showIn="@layout/decor">
 
     <TextView
         android:layout_width="wrap_content"
