--- a/app/src/main/res/layout/drawer_image_thumb.xml
+++ b/app/src/main/res/layout/drawer_image_thumb.xml
@@ -10,19 +10,17 @@
         android:text="X"
         android:id="@+id/button"
         android:layout_margin="5dp"
-
-        android:background="@mipmap/right_arrow"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
-    <ImageView
+    <com.svs.hztb.CustomViews.CircularImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/drawer_layout_thumbImage"
         android:background="@android:color/transparent"
         android:layout_below="@+id/button"
-        android:src="@mipmap/registration_bg"
-        android:scaleType="centerCrop"
+        android:src="@mipmap/thumb"
+        android:scaleType="fitCenter"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -33,6 +31,7 @@
         android:gravity="center"
         android:layout_marginLeft="10dp"
         android:textSize="26sp"
+        android:id="@+id/thumb_image"
         android:text="VENU NALLA"
         android:background="@android:color/transparent"
         android:layout_marginRight="10dp"
