--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
   >
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
