--- a/app/src/main/res/layout/activity_confirm_registration.xml
+++ b/app/src/main/res/layout/activity_confirm_registration.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     tools:context="com.svs.hztb.Activities.ConfirmRegistration">
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:padding="15dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -28,7 +28,7 @@
         android:textStyle="bold"
         android:textSize="26dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -40,7 +40,7 @@
         android:paddingLeft="20dp"
         android:textSize="14dp" />
 
-    <EditText
+    <com.svs.hztb.CustomViews.WalkWayEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="phone"
@@ -53,7 +53,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -64,7 +64,7 @@
         android:padding="20dp"
         android:gravity="center" />
 
-    <Button
+    <com.svs.hztb.CustomViews.WalkWayButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/string_registration_button_verify"
@@ -77,7 +77,7 @@
         android:layout_alignEnd="@+id/edittext_verification_code"
         android:textSize="20dp" />
 
-    <Button
+    <com.svs.hztb.CustomViews.WalkWayButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_sendagain"
