--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -53,7 +53,7 @@
         android:layout_marginBottom="15dp"
         android:textSize="14dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signUp_name"
@@ -63,7 +63,7 @@
         android:textSize="14dp"
         android:paddingLeft="5dp" />
 
-    <EditText
+    <com.svs.hztb.CustomViews.WalkWayEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
@@ -74,7 +74,7 @@
         android:layout_alignEnd="@+id/textView"
         android:layout_marginBottom="5dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signUp_email"
@@ -84,7 +84,7 @@
         android:textSize="14dp"
         android:paddingLeft="5dp" />
 
-    <EditText
+    <com.svs.hztb.CustomViews.WalkWayEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -95,7 +95,7 @@
         android:layout_alignEnd="@+id/editText_name"
         android:layout_marginBottom="5dp" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -105,7 +105,7 @@
         android:layout_alignStart="@+id/editText_email"
         android:paddingLeft="5dp" />
 
-    <EditText
+    <com.svs.hztb.CustomViews.WalkWayEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="phone"
@@ -117,7 +117,7 @@
         android:layout_marginBottom="10dp"
         android:enabled="false" />
 
-    <Button
+    <com.svs.hztb.CustomViews.WalkWayButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signup_Done"
