--- a/app/src/main/res/layout/custom_spinner_item.xml
+++ b/app/src/main/res/layout/custom_spinner_item.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/transparent"
     android:weightSum="1">
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
