--- a/app/src/main/res/layout/drawer_image_thumb.xml
+++ b/app/src/main/res/layout/drawer_image_thumb.xml
@@ -23,7 +23,7 @@
         android:scaleType="fitCenter"
         android:layout_centerHorizontal="true" />
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
