--- a/app/src/main/res/layout/fragment_request_opinion.xml
+++ b/app/src/main/res/layout/fragment_request_opinion.xml
@@ -5,7 +5,7 @@
     tools:context="com.svs.hztb.RequestOpinion">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
