--- a/app/src/main/res/layout/loadingbar.xml
+++ b/app/src/main/res/layout/loadingbar.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:padding="10dp" >
 
-    <TextView
+    <com.svs.hztb.CustomViews.WalkWayTextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
