Updated Profile Screen . Added Alert for the Verification . Altered CircleImageView.

--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -8,7 +8,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/textview_actionbarTitle"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"
         android:textSize="25dp"
         android:padding="5dp"
         android:gravity="center"
