--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,16 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/registration_bg"
     tools:context=".Activities.RegistrationActivity">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.svs.hztb.CustomViews.WalkWayTextView
         android:id="@+id/registration_header1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+       android:layout_centerHorizontal="true"
         android:gravity="center"
         android:padding="20dp"
         android:text="@string/string_howzBuddy_overview"
@@ -21,7 +22,7 @@
         android:id="@+id/registration_header2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/registration_header1"
         android:gravity="center"
         android:padding="20dp"
@@ -130,4 +131,5 @@
     android:layout_alignEnd="@+id/registration_header3"
     android:layout_alignStart="@+id/registration_header3"
     />
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
